# AptMirror

./: .gitignore  Cargo.toml
src/: main.rs
src/parsers/: in_release.rs  mod.rs
src/parsers/in_release/: in_release.rs  in_release_builder.rs  in_release_parser.rs  in_release_states.rs  mod.rs
src/parsers/in_release/states/: files_state.rs  header_state.rs  mod.rs  noop_state.rs
