[package]
name = "AptMirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.10"
tokio = {version="1.17.0", features=["full"]}
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.30"
anyhow = "1.0.56"
